# pdf-parser

./: A000_layoutlm_extractor.py  A001_pymupdf.py  A002_header_footer_2_col.py  A003_colored_footer.py  A004_Vision_2025.py  C001_create_markdown.py  C002_json_to_md.py  pdf_extractor_protocol.py  pdf_layout_tester.py  pyproject.toml
content/iptables-quiz/: README.md  answer-key.md  iptables-packet-flow-quiz.md
content/iptables-quiz/mcq/: 01-filter-table-purpose.md  02-dnat-chain.md  03-input-chain-packets.md  04-packet-flow-order.md  05-masquerading-command.md  06-local-output-flow.md  07-mangle-table-usage.md  08-port-forwarding-rules.md  09-conntrack-analysis.md  10-complete-forwarding-flow.md  11-raw-table-purpose.md  12-docker-iptables.md  13-icmp-filtering.md  14-logging-rules.md  15-default-policy.md  16-ftp-conntrack.md  17-rate-limiting.md  18-source-nat-scenarios.md  19-table-priority-order.md  20-ipv6-ip6tables.md
content/iptables-quiz/subjective/L3-baseline/: 01-iptables-basics-and-chains.md  02-nat-basics.md
content/iptables-quiz/subjective/L4-baseline/: 01-port-forwarding-scenario.md  02-connection-tracking-deep-dive.md
content/iptables-quiz/subjective/L5-baseline/: 01-complex-nat-scenario.md  02-performance-and-optimization.md
docs/: TESTING.md
notes/: layoutparser-ocr-usage-grep-app.md  prompt-for-pdf-parser.md
tests/: __init__.py  conftest.py  extractor_config.py  test_pdf_layouts.py
