[project]
name = "reformatting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "layoutparser[ocr]>=0.3.4",
    "pymupdf4llm>=0.0.25",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]


[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
